k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas-cms-homepage
spec:
  selector:
    app: saas-cms-homepage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
